profiling-using-exp-runner/recursive-hanoi-remote/experiments/hanoi_experiment_1/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: tower_of_hanoi_cache, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.hanoi as module; X = 10; module.tower_of_hanoi_cache(X,A,C,B); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 9.264946868896486 for 0.22914846 sec of execution.
